root dir as watch root and more examples